<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="120dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/eat_tip"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg"
            android:gravity="bottom"
            android:text="@string/tip2s"
            android:textColor="#ffffff"
            android:textAlignment="center" />
        <ImageView
            android:id="@+id/ic_eat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_eat"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tip2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="45dp"/>

        <TextView
            android:id="@+id/sleep_tip"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg2"
            android:layout_below="@+id/eat_tip"
            android:gravity="bottom"
            android:text="@string/tip_sleep"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/ic_sleep"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_sleep"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/tip_sleept"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="80dp"/>

        <TextView
            android:id="@+id/sport_tip"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg3"
            android:layout_below="@+id/sleep_tip"
            android:gravity="bottom"
            android:text="@string/tip1s"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/ic_sport"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_run"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="45dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/tip1"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="80dp"/>

    </RelativeLayout>


</ScrollView>
